# schema-infer

./: LICENSE  README.md  pyproject.toml
src/schema_infer/: __init__.py  core.py
